--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.616.0",
+    "adm-zip": "^0.5.14",
+    "aws-sdk": "^2.1659.0",
     "minecraft-launcher-core": "^3.18.1",
     "msmc": "^5.0.5"
   },
